--- a/RobotControl/app/src/main/res/values/colors.xml
+++ b/RobotControl/app/src/main/res/values/colors.xml
@@ -74,6 +74,7 @@
     <color name="primary_dark">#1565C0</color>
     <color name="primary_light">#BBDEFB</color>
     <color name="accent">#FF6F00</color>
+    <color name="accent_primary">#FF6F00</color>
     <color name="accent_dark">#E64A19</color>
     <color name="background">#F5F7FA</color>
     <color name="card_background">#FFFFFF</color>
