--- a/RobotControl/app/src/main/res/layout/fragment_mechatronics.xml
+++ b/RobotControl/app/src/main/res/layout/fragment_mechatronics.xml
@@ -78,10 +78,10 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Motors & Actuators"
+                    android:text="Motors and Actuators"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:textColor="@color/accent_primary"/>
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -114,7 +114,7 @@
                     android:text="Sensors"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:textColor="@color/accent_primary"/>
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -147,7 +147,7 @@
                     android:text="Microcontrollers"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:textColor="@color/accent_primary"/>
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -179,7 +179,7 @@
                     android:text="Wireless Communication"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:textColor="@color/accent_primary"/>
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:layout_width="wrap_content"
