--- a/RobotControl/app/src/main/res/layout/fragment_quiz.xml
+++ b/RobotControl/app/src/main/res/layout/fragment_quiz.xml
@@ -73,80 +73,52 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp">
 
-            <androidx.cardview.widget.CardView
+            <RadioButton
+                android:id="@+id/rbOption1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="1dp"
-                android:backgroundTint="@color/card_background">
+                android:text="Option 1"
+                android:textSize="16sp"
+                android:textColor="@color/text_primary"
+                android:padding="16dp"
+                android:background="@drawable/bg_input_field"
+                android:buttonTint="@color/accent_primary" />
 
-                <RadioButton
-                    android:id="@+id/rbOption1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Option 1"
-                    android:textSize="16sp"
-                    android:textColor="@color/text_primary"
-                    android:padding="16dp"
-                    android:buttonTint="@color/accent_primary"/>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
+            <RadioButton
+                android:id="@+id/rbOption2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="1dp"
-                android:backgroundTint="@color/card_background">
+                android:text="Option 2"
+                android:textSize="16sp"
+                android:textColor="@color/text_primary"
+                android:padding="16dp"
+                android:background="@drawable/bg_input_field"
+                android:buttonTint="@color/accent_primary" />
 
-                <RadioButton
-                    android:id="@+id/rbOption2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Option 2"
-                    android:textSize="16sp"
-                    android:textColor="@color/text_primary"
-                    android:padding="16dp"
-                    android:buttonTint="@color/accent_primary"/>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
+            <RadioButton
+                android:id="@+id/rbOption3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="1dp"
-                android:backgroundTint="@color/card_background">
+                android:text="Option 3"
+                android:textSize="16sp"
+                android:textColor="@color/text_primary"
+                android:padding="16dp"
+                android:background="@drawable/bg_input_field"
+                android:buttonTint="@color/accent_primary" />
 
-                <RadioButton
-                    android:id="@+id/rbOption3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Option 3"
-                    android:textSize="16sp"
-                    android:textColor="@color/text_primary"
-                    android:padding="16dp"
-                    android:buttonTint="@color/accent_primary"/>
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
+            <RadioButton
+                android:id="@+id/rbOption4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="1dp"
-                android:backgroundTint="@color/card_background">
-
-                <RadioButton
-                    android:id="@+id/rbOption4"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Option 4"
-                    android:textSize="16sp"
-                    android:textColor="@color/text_primary"
-                    android:padding="16dp"
-                    android:buttonTint="@color/accent_primary"/>
-            </androidx.cardview.widget.CardView>
+                android:text="Option 4"
+                android:textSize="16sp"
+                android:textColor="@color/text_primary"
+                android:padding="16dp"
+                android:background="@drawable/bg_input_field"
+                android:buttonTint="@color/accent_primary" />
 
         </RadioGroup>
 
