--- a/RobotControl/app/src/main/res/layout/activity_main_dashboard.xml
+++ b/RobotControl/app/src/main/res/layout/activity_main_dashboard.xml
@@ -196,7 +196,7 @@
                             android:text="Learn Robotics"
                             android:textSize="16sp"
                             android:textStyle="bold"
-                            android:textColor="@color/black"/>
+                            android:textColor="@color/text_primary"/>
 
                         <TextView
                             android:layout_width="wrap_content"
