--- a/RobotControl/app/src/main/res/layout/activity_control.xml
+++ b/RobotControl/app/src/main/res/layout/activity_control.xml
@@ -74,7 +74,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/margin_tiny"
-                                android:text="Command: (none yet)"
+                                android:text="@string/command_none"
                                 android:textAppearance="@style/TextAppearance.Caption"
                                 android:textColor="@color/text_secondary" />
                         </LinearLayout>
@@ -117,7 +117,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Motor Control"
+                        android:text="@string/motor_control"
                         android:textAppearance="@style/TextAppearance.Title"
                         android:textColor="@color/accent_primary"
                         android:layout_marginBottom="@dimen/margin_small" />
@@ -300,7 +300,7 @@
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Servo Control"
+                        android:text="@string/servo_control"
                         android:textAppearance="@style/TextAppearance.Title"
                         android:textColor="@color/accent_primary"
                         android:layout_marginBottom="@dimen/margin_small" />
