--- a/RobotControl/app/src/main/res/layout/activity_education.xml
+++ b/RobotControl/app/src/main/res/layout/activity_education.xml
@@ -18,7 +18,7 @@
             android:id="@+id/tvEducationTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Learn Robotics"
+            android:text="@string/education_activity_label"
             android:textSize="28sp"
             android:textStyle="bold"
             android:textColor="@color/white"/>
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Master the fundamentals of robotics and electronics"
+            android:text="@string/education_subtitle"
             android:textSize="14sp"
             android:textColor="@color/white"
             android:layout_marginTop="4dp"/>
