--- a/RobotControl/app/src/main/res/values-night/colors.xml
+++ b/RobotControl/app/src/main/res/values-night/colors.xml
@@ -18,4 +18,20 @@
 
     <!-- Buttons -->
     <color name="button_secondary">@color/dark_background_secondary</color>
+
+    <!-- Pink Theme - Dark Variant -->
+    <color name="pink_primary">#C99499</color>
+    <color name="pink_primary_dark">#A67277</color>
+    <color name="pink_primary_light">#E8B5BC</color>
+    <color name="pink_accent">#D4949C</color>
+    <color name="pink_accent_dark">#B87880</color>
+    <color name="pink_secondary">#3D2C2F</color>
+    
+    <!-- Brown Theme - Dark Variant -->
+    <color name="brown_primary">#8B4513</color>
+    <color name="brown_primary_dark">#654321</color>
+    <color name="brown_primary_light">#A0522D</color>
+    <color name="brown_accent">#CD853F</color>
+    <color name="brown_accent_dark">#8B4513</color>
+    <color name="brown_secondary">#5C4033</color>
 </resources>
