--- a/RobotControl/app/src/main/res/values/colors.xml
+++ b/RobotControl/app/src/main/res/values/colors.xml
@@ -3,6 +3,9 @@
     <!-- Base colors -->
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <!-- Splash background -->
+    <color name="splash_background">#1B1B1B</color>
     
     <!-- Robotics Theme - Primary Colors -->
     <color name="robot_blue_primary">#1E88E5</color>
@@ -92,4 +95,20 @@
     
     <!-- Error Colors -->
     <color name="error_light">#FF8A80</color>
+    
+    <!-- Pink Theme Colors -->
+    <color name="pink_primary">#f5c8c8</color>
+    <color name="pink_primary_dark">#E8A5A5</color>
+    <color name="pink_primary_light">#FADADA</color>
+    <color name="pink_accent">#D4949C</color>
+    <color name="pink_accent_dark">#B87880</color>
+    <color name="pink_secondary">#F5D9D9</color>
+    
+    <!-- Brown Theme Colors -->
+    <color name="brown_primary">#A52A2A</color>
+    <color name="brown_primary_dark">#8B2323</color>
+    <color name="brown_primary_light">#CD5C5C</color>
+    <color name="brown_accent">#8B4513</color>
+    <color name="brown_accent_dark">#5C2E0F</color>
+    <color name="brown_secondary">#D2B48C</color>
 </resources>
