--- a/RobotControl/app/src/main/res/values/themes.xml
+++ b/RobotControl/app/src/main/res/values/themes.xml
@@ -5,4 +5,20 @@
     </style>
 
     <style name="Theme.RobotControl" parent="Base.Theme.RobotControl" />
+    
+    <!-- Pink Color Theme -->
+    <style name="Theme.RobotControl.Pink" parent="Theme.Material3.Light.NoActionBar">
+        <item name="colorPrimary">@color/pink_primary</item>
+        <item name="colorPrimaryDark">@color/pink_primary_dark</item>
+        <item name="colorAccent">@color/pink_accent</item>
+        <item name="colorSecondary">@color/pink_secondary</item>
+    </style>
+    
+    <!-- Brown Color Theme -->
+    <style name="Theme.RobotControl.Brown" parent="Theme.Material3.Light.NoActionBar">
+        <item name="colorPrimary">@color/brown_primary</item>
+        <item name="colorPrimaryDark">@color/brown_primary_dark</item>
+        <item name="colorAccent">@color/brown_accent</item>
+        <item name="colorSecondary">@color/brown_secondary</item>
+    </style>
 </resources>
